# llterm

./: .gitignore  README.en.md  README.md  pyproject.toml
assets/: make_icon.py
docs/: ARTICLE_SEEDS.md  SESSION_SUMMARY.md  next_plan.md  spike_results.md
docs/plans/: 2026-06-06-llterm-v1.md
spikes/: spike_keys.py  spike_ptyrows.py
src/llterm/: __init__.py  app.py  progress.py  rad.py  summary.py  templates.py
src/llterm/ctl/: __init__.py  __main__.py  consumer.py  emit.py  gate.py  ledger.py  queue.py  schema.py
src/llterm/gui/: __init__.py  __main__.py  app.py  choice_dialog.py  settings.py  termlog.py  virtual.py  worker.py
src/llterm/host/: api_keys.py  choice.py  codex_runner.py  console.py  gemini_runner.py  loop.py  offload_tools.py  openai_compat_runner.py  orchestra_runner.py  pty_host.py  vtbridge.py  watcher.py
src/llterm/i18n/: __init__.py  messages.py
src/llterm/input/: __init__.py  buffer.py  keys.py  render.py
tests/: conftest.py  test_api_keys.py  test_app_loop.py  test_buffer.py  test_choice.py  test_choice_dialog.py  test_codex_runner.py  test_ctl_consumer.py  test_emit.py  test_gate.py  test_gemini_runner.py  test_gui.py  test_gui_settings.py  test_i18n.py  test_keys.py  test_ledger.py  test_loop.py  test_offload_tools.py  test_openai_compat_runner.py  test_orchestra_runner.py  test_progress.py  test_pty_host.py  test_queue.py  test_rad.py  test_render.py  test_schema.py  test_summary.py  test_templates.py  test_termlog.py  test_vtbridge.py  test_watcher.py
