[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llterm"
version = "0.1.0a0"
description = "Self-driving terminal host for Claude Code: detached input editor + structured control plane"
requires-python = ">=3.11"
dependencies = ["pywinpty>=2.0; sys_platform == 'win32'"]

[project.optional-dependencies]
dev = ["pytest>=8"]
gui = ["PySide6>=6.6"]

[project.scripts]
llterm = "llterm.app:main"
llterm-loop = "llterm.host.loop:main"
llterm-gui = "llterm.gui.app:main"
llterm-rad = "llterm.rad:main"

[tool.setuptools.packages.find]
where = ["src"]
