[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llterm"
version = "0.2.0a0"
description = "Self-driving loop driver + Qt GUI for Claude Code (headless --session-id/--resume + L1 control plane)"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
llterm = "llterm.gui.app:main"
llterm-loop = "llterm.host.loop:main"
llterm-gui = "llterm.gui.app:main"
llterm-rad = "llterm.rad:main"

[tool.setuptools.packages.find]
where = ["src"]
