[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llterm"
version = "0.2.0a0"
description = "Self-driving loop driver + Qt GUI for Claude Code (headless --session-id/--resume + L1 control plane)"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
llterm-loop = "llterm.host.loop:main"
llterm-rad = "llterm.rad:main"
llterm-debug = "llterm.gui.app:main"
llterm-progress = "llterm.progress:main"  # 全プロジェクト集約の共通進捗サマリーを生成 (自動更新スクリプト)

# GUI 本流: gui-scripts はコンソール無し (pythonw) の exe を生成する
[project.gui-scripts]
llterm = "llterm.gui.app:main"
llterm-gui = "llterm.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
